--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,15 +1,58 @@
 .container{
     width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.subcontainer{
+    width: 650px;
+    border-bottom: 1px rgba(0, 0, 0, 0.25) solid;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
 }
 
 .title{
-    font-size: 24px;
+    font-size: 32px;
+    margin: 0;
 }
-
 .title:hover{
     cursor: pointer;
 }
 
 .title_link{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 3px;
     text-decoration: none;
+    color: white;
+}
+.title_link:hover{
+    color: rgb(215, 215, 215);
+}
+
+.buttoncontainer{
+    margin-right: 0;
+    margin-left: auto;
+}
+
+.iconbutton{
+    height: 24px;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2px;
+
+    color: rgba(255, 255, 255, 0.9);
+    border: 0;
+    background-color: transparent;
+    font-size: 16px;
+    font-weight: 700;
+}
+.iconbutton:hover{
+    cursor: pointer;
+    color: rgb(215, 215, 215);
 }
