--- a/src/components/AddTaskDialog.module.css
+++ b/src/components/AddTaskDialog.module.css
@@ -45,8 +45,16 @@
 
     font-size: 18px;
 }
-.pomodoro_count_input::-webkit-outer-spin-button, .pomodoro_count_input::-webkit-inner-spin-button{
-    display: none;
+/* Chrome, Safari, Edge, Opera */
+.pomodoro_count_input::-webkit-outer-spin-button,
+.pomodoro_count_input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.pomodoro_count_input[type=number] {
+  -moz-appearance: textfield;
 }
 
 .pomodoro_count_subcontainer{
